Fix for widget bottom element alignment

--- a/client/app/components/dashboards/widget.less
+++ b/client/app/components/dashboards/widget.less
@@ -200,10 +200,6 @@ visualization-name {
   }
 }
 
-.refresh-button {
-  margin-left: -6px;
-}
-
 .tile {
   .widget-menu-regular, .btn__refresh {
     opacity: 0 !important;
@@ -248,8 +244,7 @@ visualization-name {
   }
 
   .tile__bottom-control {
-    padding: 10px 15px;
-    line-height: 2;
+    padding: 10px 5px;
 
     a {
       color: fade(@redash-black, 65%);
